8072466: Deadlock when initializing MulticastSocket and DatagramSocket

Reviewed-by: chegar